# spinalcord-segmentation-1D-template-matching

./: Main.py  README.md  setup_03.py
cpp/: CMakeLists.txt  CMakeLists.txt~
cpp/src/: CMakeLists.txt  CMakeLists.txt~  numpy.i
cpp/src/calculus/: CMakeLists.txt  CMakeLists.txt~  calculus.cpp  calculus.cpp~  calculus.h  calculus.h~  calculus.i  calculus.i~  swig_example.i~
cpp/src/spline/: CMakeLists.txt  CMakeLists.txt~  spline.cpp  spline.cpp~  spline.h  spline.h~  spline.i  spline.i~  vec3.h
